--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+# DataSource Configuration
+spring.datasource.url=jdbc:h2:mem:demo1
 spring.datasource.username=root
 spring.datasource.password=
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.driver-class-name=org.h2.Driver
 
+# JPA/Hibernate Configuration
+spring.jpa.show-sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
-spring.jba.show-sql=true
-spring.jba.generate-ddl=true
-spring.jba.hibernate.ddl.auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+# H2 Console Configuration
 spring.h2.console.enabled=true
