--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.jpa.generate-ddl=true
 
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/quanlynhatro?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
