--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,8 @@
-spring.jpa.database=MYSQL
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.defer-datasource-initialization=true
-spring.jpa.generate-ddl=true
-
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/quanlynhatro?useSSL=false&serverTimezone=UTC
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.password=ADMIN@123
+
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
