--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ pom.xml
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+src/main/resources/application.properties
 
 ### STS ###
 .apt_generated
