--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
     <description>QuanLyThuChiNhaTro</description>
     <properties>
         <java.version>17</java.version>
+        <spring-security.version>6.2.0</spring-security.version>
     </properties>
     <dependencies>
         <dependency>
@@ -36,6 +37,11 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
                 <artifactId>lombok</artifactId>
                 <optional>true</optional>
         </dependency>
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
