--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.url=jdbc:mysql://127.0.0.2:3306/demodemo
 spring.datasource.username=root
-spring.datasource.password=ADMIN@123
+spring.datasource.password=123456
 
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
