--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,4 @@
+server.port=8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=root
@@ -8,7 +9,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 # cookie configuration
-server.servlet.session.cookie.secure=false
-server.servlet.session.cookie.http-only=false
-server.servlet.session.cookie.same-site=none
-server.servlet.session.cookie.max-age=86400
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.same-site=strict
+server.servlet.session.cookie.max-age=3000
