--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -13,3 +13,4 @@ server.servlet.session.cookie.secure=true
 server.servlet.session.cookie.http-only=true
 server.servlet.session.cookie.same-site=strict
 server.servlet.session.cookie.max-age=3000
+jenky.cors.allowed-urls=http://localhost:5500
