--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,4 @@ server.servlet.session.cookie.secure=false
 server.servlet.session.cookie.http-only=false
 server.servlet.session.cookie.same-site=none
 server.servlet.session.cookie.max-age=86400
+jenky.cors.allowed-urls=http://localhost:5500
