--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 # cookie configuration
 server.servlet.session.cookie.secure=false
 server.servlet.session.cookie.http-only=false
-server.servlet.session.cookie.same-site=none
+server.servlet.session.cookie.same-site=lax
 server.servlet.session.cookie.max-age=86400
-jenky.cors.allowed-urls=http://localhost:5500
+jenky.cors.allowed-urls=http://localhost:5500,http://localhost
