--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=root
-<<<<<<< HEAD
-spring.datasource.password=root
->>>>>>> 3ca497058874f6cd009bd4fcd95b44bf1b5f0599
-
+spring.datasource.password=ADMIN@123
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.show_sql = true
 spring.jpa.hibernate.ddl-auto=update
 
 # cookie configuration
