--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/demodemo
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.show_sql = true
@@ -13,3 +13,5 @@ server.servlet.session.cookie.http-only=false
 server.servlet.session.cookie.same-site=lax
 server.servlet.session.cookie.max-age=86400
 jenky.cors.allowed-urls=http://localhost:5500,http://localhost
+
+server.port=8081
