--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ server.servlet.session.cookie.same-site=lax
 server.servlet.session.cookie.max-age=86400
 jenky.cors.allowed-urls=http://localhost:5500,http://localhost
 
-server.port=8081
+#server.port=8081
