--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/mydb
+spring.datasource.url=jdbc:mysql://localhost:3306/quanlynhatro
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=123456
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.show_sql = true
