--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://localhost:3306/quanlynhatro
+spring.datasource.url=jdbc:mysql://localhost:3306/demodemo
 spring.datasource.username=root
 spring.datasource.password=123456
 
